--- a/index.html
+++ b/index.html
@@ -386,101 +386,101 @@
                         <!-- row 1 -->
                         <div class=" col-span-1">A</div>
                         <div class="col-span-11 grid grid-cols-10 gap-8">
-                            <button id="A-1" class="btn seat-btn col-span-2">A1</button>
-                            <button id="A-2" class="btn seat-btn col-span-2">A2</button>
+                            <button id="A-1" class="btn seat-btn col-span-2 hover:bg-green-500">A1</button>
+                            <button id="A-2" class="btn seat-btn col-span-2 hover:bg-green-500">A2</button>
                             <p class="hidden sm:block col-span-2"></p>
-                            <button id="A-3" class="btn seat-btn col-span-2">A3</button>
-                            <button id="A-4" class="btn seat-btn col-span-2">A4</button>
+                            <button id="A-3" class="btn seat-btn col-span-2 hover:bg-green-500">A3</button>
+                            <button id="A-4" class="btn seat-btn col-span-2 hover:bg-green-500">A4</button>
                         </div>
 
                         <!-- row 2 -->
                         <div class=" col-span-1">B</div>
                         <div class="col-span-11 grid grid-cols-10 gap-8">
-                            <button id="B-1" class="btn seat-btn col-span-2">B1</button>
-                            <button id="B-2" class="btn seat-btn col-span-2">B2</button>
+                            <button id="B-1" class="btn seat-btn col-span-2 hover:bg-green-500">B1</button>
+                            <button id="B-2" class="btn seat-btn col-span-2 hover:bg-green-500">B2</button>
                             <p class="hidden sm:block col-span-2"></p>
-                            <button id="B-3" class="btn seat-btn col-span-2">B3</button>
-                            <button id="B-4" class="btn seat-btn col-span-2">B4</button>
+                            <button id="B-3" class="btn seat-btn col-span-2 hover:bg-green-500">B3</button>
+                            <button id="B-4" class="btn seat-btn col-span-2 hover:bg-green-500">B4</button>
                         </div>
 
                         <!-- row 3 -->
                         <div class=" col-span-1">C</div>
                         <div class="col-span-11 grid grid-cols-10 gap-8">
-                            <button id="C-1" class="btn seat-btn col-span-2">C1</button>
-                            <button id="C-2" class="btn seat-btn col-span-2">C2</button>
+                            <button id="C-1" class="btn seat-btn col-span-2 hover:bg-green-500">C1</button>
+                            <button id="C-2" class="btn seat-btn col-span-2 hover:bg-green-500">C2</button>
                             <p class="hidden sm:block col-span-2"></p>
-                            <button id="C-3" class="btn seat-btn col-span-2">C3</button>
-                            <button id="C-4" class="btn seat-btn col-span-2">C4</button>
+                            <button id="C-3" class="btn seat-btn col-span-2 hover:bg-green-500">C3</button>
+                            <button id="C-4" class="btn seat-btn col-span-2 hover:bg-green-500">C4</button>
                         </div>
 
                         <!-- row 4 -->
                         <div class=" col-span-1">D</div>
                         <div class="col-span-11 grid grid-cols-10 gap-8">
-                            <button id="D-1" class="btn seat-btn col-span-2">D1</button>
-                            <button id="D-2" class="btn seat-btn col-span-2">D2</button>
+                            <button id="D-1" class="btn seat-btn col-span-2 hover:bg-green-500">D1</button>
+                            <button id="D-2" class="btn seat-btn col-span-2 hover:bg-green-500">D2</button>
                             <p class="hidden sm:block col-span-2"></p>
-                            <button id="D-3" class="btn seat-btn col-span-2">D3</button>
-                            <button id="D-4" class="btn seat-btn col-span-2">D4</button>
+                            <button id="D-3" class="btn seat-btn col-span-2 hover:bg-green-500">D3</button>
+                            <button id="D-4" class="btn seat-btn col-span-2 hover:bg-green-500">D4</button>
                         </div>
 
                         <!-- row 5 -->
                         <div class=" col-span-1">E</div>
                         <div class="col-span-11 grid grid-cols-10 gap-8">
-                            <button id="E-1" class="btn seat-btn col-span-2">E1</button>
-                            <button id="E-2" class="btn seat-btn col-span-2">E2</button>
+                            <button id="E-1" class="btn seat-btn col-span-2 hover:bg-green-500">E1</button>
+                            <button id="E-2" class="btn seat-btn col-span-2 hover:bg-green-500">E2</button>
                             <p class="hidden sm:block col-span-2"></p>
-                            <button id="E-3" class="btn seat-btn col-span-2">E3</button>
-                            <button id="E-4" class="btn seat-btn col-span-2">E4</button>
+                            <button id="E-3" class="btn seat-btn col-span-2 hover:bg-green-500">E3</button>
+                            <button id="E-4" class="btn seat-btn col-span-2 hover:bg-green-500">E4</button>
                         </div>
 
                         <!-- row 6 -->
                         <div class=" col-span-1">F</div>
                         <div class="col-span-11 grid grid-cols-10 gap-8">
-                            <button id="F-1" class="btn seat-btn col-span-2">F1</button>
-                            <button id="F-2" class="btn seat-btn col-span-2">F2</button>
+                            <button id="F-1" class="btn seat-btn col-span-2 hover:bg-green-500">F1</button>
+                            <button id="F-2" class="btn seat-btn col-span-2 hover:bg-green-500">F2</button>
                             <p class="hidden sm:block col-span-2"></p>
-                            <button id="F-3" class="btn seat-btn col-span-2">F3</button>
-                            <button id="F-4" class="btn seat-btn col-span-2">F4</button>
+                            <button id="F-3" class="btn seat-btn col-span-2 hover:bg-green-500">F3</button>
+                            <button id="F-4" class="btn seat-btn col-span-2 hover:bg-green-500">F4</button>
                         </div>
 
                         <!-- row 7 -->
                         <div class=" col-span-1">G</div>
                         <div class="col-span-11 grid grid-cols-10 gap-8">
-                            <button id="G-1" class="btn seat-btn col-span-2">G1</button>
-                            <button id="G-2" class="btn seat-btn col-span-2">G2</button>
+                            <button id="G-1" class="btn seat-btn col-span-2 hover:bg-green-500">G1</button>
+                            <button id="G-2" class="btn seat-btn col-span-2 hover:bg-green-500">G2</button>
                             <p class="hidden sm:block col-span-2"></p>
-                            <button id="G-3" class="btn seat-btn col-span-2">G3</button>
-                            <button id="G-4" class="btn seat-btn col-span-2">G4</button>
+                            <button id="G-3" class="btn seat-btn col-span-2 hover:bg-green-500">G3</button>
+                            <button id="G-4" class="btn seat-btn col-span-2 hover:bg-green-500">G4</button>
                         </div>
 
                         <!-- row 8 -->
                         <div class=" col-span-1">H</div>
                         <div class="col-span-11 grid grid-cols-10 gap-8">
-                            <button id="H-1" class="btn seat-btn col-span-2">H1</button>
-                            <button id="H-2" class="btn seat-btn col-span-2">H2</button>
+                            <button id="H-1" class="btn seat-btn col-span-2 hover:bg-green-500">H1</button>
+                            <button id="H-2" class="btn seat-btn col-span-2 hover:bg-green-500">H2</button>
                             <p class="hidden sm:block col-span-2"></p>
-                            <button id="H-3" class="btn seat-btn col-span-2">H3</button>
-                            <button id="H-4" class="btn seat-btn col-span-2">H4</button>
+                            <button id="H-3" class="btn seat-btn col-span-2 hover:bg-green-500">H3</button>
+                            <button id="H-4" class="btn seat-btn col-span-2 hover:bg-green-500">H4</button>
                         </div>
 
                         <!-- row 9 -->
                         <div class=" col-span-1">I</div>
                         <div class="col-span-11 grid grid-cols-10 gap-8">
-                            <button id="I-1" class="btn seat-btn col-span-2">I1</button>
-                            <button id="I-2" class="btn seat-btn col-span-2">I2</button>
+                            <button id="I-1" class="btn seat-btn col-span-2 hover:bg-green-500">I1</button>
+                            <button id="I-2" class="btn seat-btn col-span-2 hover:bg-green-500">I2</button>
                             <p class="hidden sm:block col-span-2"></p>
-                            <button id="I-3" class="btn seat-btn col-span-2">I3</button>
-                            <button id="I-4" class="btn seat-btn col-span-2">I4</button>
+                            <button id="I-3" class="btn seat-btn col-span-2 hover:bg-green-500">I3</button>
+                            <button id="I-4" class="btn seat-btn col-span-2 hover:bg-green-500">I4</button>
                         </div>
 
                         <!-- row 10 -->
                         <div class=" col-span-1">J</div>
                         <div class="col-span-11 grid grid-cols-10 gap-8">
-                            <button id="J-1" class="btn seat-btn col-span-2">J1</button>
-                            <button id="J-2" class="btn seat-btn col-span-2">J2</button>
+                            <button id="J-1" class="btn seat-btn col-span-2 hover:bg-green-500">J1</button>
+                            <button id="J-2" class="btn seat-btn col-span-2 hover:bg-green-500">J2</button>
                             <p class="hidden sm:block col-span-2"></p>
-                            <button id="J-3" class="btn seat-btn col-span-2">J3</button>
-                            <button id="J-4" class="btn seat-btn col-span-2">J4</button>
+                            <button id="J-3" class="btn seat-btn col-span-2 hover:bg-green-500">J3</button>
+                            <button id="J-4" class="btn seat-btn col-span-2 hover:bg-green-500">J4</button>
                         </div>
 
                     </div>
@@ -512,15 +512,15 @@
                                 </h4>
                             </div>
 
-                            <!-- dotted divider -->
+                            <!-- dashed divider -->
                             <div class="border-dashed border border-[#03071233]"></div>
 
                             <!-- economy -->
                             <div id="economy">
                             </div>
 
-                            <h2 id="no-seat-msg" class="text-2xl text-red-400 font-bold">
-                                No seat Booked
+                            <h2 id="no-seat-msg" class="text-2xl text-red-600 font-bold">
+                                No seat Booked.
                             </h2>
 
                             <!-- dotted divider -->
